Fix a11y keyboard-only rendering on Firefox

--- a/a11y.css
+++ b/a11y.css
@@ -8,6 +8,7 @@
 */
 
 [sui-a11y~="keyboardOnly"]:not([sui-a11y~="showOnFocus"]:focus) {
+    display: block;
     width: 0;
     height: 0;
     margin: 0;
